# apple-gen

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.cache/clangd/index/: apple-gen.cpp.F246120CCDE52B2B.idx  base64.hpp.80BFA2B11DC0D5DD.idx  crypt.cpp.ACA34CBAB9FCBFF7.idx  crypt.h.0FAD2EDC92E058D3.idx  ids_validation.h.99DE536A7DE9843E.idx
include/: ids_validation.h
src/: crypt.cpp
src/asm/: README.md
src/asm/amd64/: encrypt.s
test/: CMakeLists.txt  apple-gen.cpp
